sfSandBoxCode/force-app/main/default/objects/Opportunity_Work_Order__c/Opportunity_Work_Order__c.object-meta.xml
<CustomObject>
    <label>Opportunity Work Order</label>
    <nameField>
        <displayFormat>OW-{0000}</displayFormat>
        <label>Opportunity Work Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Work Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>