sfSandBoxCode/force-app/main/default/objects/Opportunity_Work_Order__c/fields/WO_Item_Issuance_Started__c.field-meta.xml
<CustomField>
    <fullName>WO_Item_Issuance_Started__c</fullName>
    <formula>Work_Order_Status__c = &quot;5-Pick List records generated&quot;  || 
 Work_Order_Status__c = &quot;7-Partial Receipt&quot;  || 
 Work_Order_Status__c = &quot;8-Receipts completed&quot;  || 
 Work_Order_Status__c = &quot;9-Closed&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WO Item Issuance Started</label>
    <type>Checkbox</type>
</CustomField>