sfSandBoxCode/force-app/main/default/objects/Opportunity_Work_Order__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>rstk__wocst__c</referenceTo>
    <relationshipLabel>Opportunity Work Orders</relationshipLabel>
    <relationshipName>Opportunity_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>