sfSandBoxCode/force-app/main/default/objects/Opportunity_Work_Order__c/fields/Work_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Status__c</fullName>
    <formula>TEXT(WorkOrder__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Status</label>
    <type>Text</type>
</CustomField>