sfSandBoxCode/force-app/main/default/objects/Opportunity_Work_Order__c/fields/Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type__c</fullName>
    <label>Work Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Structure</fullName>
            </value>
            <value>
                <fullName>Business in a Box</fullName>
            </value>
            <value>
                <fullName>Pit Conversion</fullName>
            </value>
            <value>
                <fullName>Basic FLT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>