sfSandBoxCode/force-app/main/default/objects/Opportunity_Work_Order__c/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Opportunity Work Orders</relationshipLabel>
    <relationshipName>Opportunity_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>